fluxcd/apps/base/landing/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: landing
  annotations:
    linkerd.io/inject: enabled
