fluxcd/apps/base/landing/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing
spec:
  selector:
    matchLabels:
      app: landing
  replicas: 1
  template:
    metadata:
      labels:
        app: landing
    spec:
      containers:
      - name: landing
        image: registry.wuhoo.xyz/jerry/wuhoo.xyz:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 128Mi
        ports:
        - containerPort: 80
