fluxcd/apps/base/landing/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: landing-service
spec:
  selector:
    app: landing
  ports:
  - port: 8080
    targetPort: 80
