fluxcd/apps/base/landing/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-ingress
  labels:
    name: landing
  annotations:
    homelab/public: "true"
spec:
  ingressClassName: nginx-public
  rules:
  - host: ${DOMAIN}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: landing-service
            port: 
              number: 8080
