fluxcd/apps/base/landing/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: landing
spec:
  podSelector:
    matchLabels:
      app: landing
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-anubis
    ports:
    - port: 80
      protocol: TCP
